message MSG_CS_DS_XVECTOR_SEND
{
    required uint32 dbID = 2;
    required string tableName = 3;
    required string columnName = 4;
    repeated uint32 xVector = 5;
}
message MSG_DS_CS_XVECTOR_SEND_ACK
{
    required int32 statusCode = 1;
}
